# shoeguard-backend

./: .dockerignore  .gitignore  Dockerfile  README.md  conftest.py  docker-compose.yml  manage.py  poetry.toml  pyproject.toml  pytest.ini
.github/workflows/: deploy.yml  test.yml
apps/api/: urls.py
apps/common/: decorators.py  models.py  signals.py  utils.py
apps/location_history/: __init__.py  admin.py  apps.py  models.py  serializers.py  signals.py  views.py
apps/location_history/migrations/: 0001_initial.py  0002_auto_20210923_2150.py  0003_remove_locationhistory_parent_child_pair.py  0004_auto_20210925_1453.py
apps/location_history/tests/: test_create_location_history.py  test_get_recent_location_history.py
apps/report/: __init__.py  admin.py  apps.py  models.py  serializers.py  signals.py  views.py
apps/report/migrations/: 0001_initial.py  0002_alter_report_address.py  0003_auto_20210923_2052.py  0004_remove_report_parent_child_pair.py  0005_report_is_done.py  0006_auto_20210925_1453.py
apps/report/tests/: test_create_report.py  test_get_reports.py
apps/user/: admin.py  models.py  serializer.py  serializers.py  signals.py  views.py
apps/user/migrations/: 0001_initial.py  0002_alter_user_partner.py  0002_auto_20210923_1327.py  0003_auto_20210829_1950.py  0003_delete_parentchildpair.py  0004_auth.py  0005_alter_auth_code.py  0006_alter_user_parent.py
apps/user/tests/: test_add_child.py  test_create_parent_child_pair.py  (+6 more)
nginx/: nginx.conf
shoeguard/: asgi.py  urls.py  wsgi.py
shoeguard/configs/: base.py  debug.py  prod.py  test.py
